--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
 </head>
 <body>
-    <h1>Hello Bootstrap Development</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 bg-success">one</div>
+            <div class="col-xl-8 bg-danger ">two</div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-md-2 bg-success">one</div>
+            <div class="col-md-8 bg-danger">two</div>
+            <div class="col-md-2 bg-success">three</div>
+        </div>
+        <br>
+        <div class="row align-items-end">
+            <div class="col bg-success">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis velit voluptatem reprehenderit cum doloremque quis laboriosam iste harum ipsam suscipit blanditiis est voluptatum, doloribus asperiores maxime sunt repellat ipsa! Quas!</div>
+            <div class="col bg-danger">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum et autem itaque nulla nesciunt? Magni quas deleniti, quidem porro, labore minima impedit, a rem aliquid modi earum maiores aut quam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium, voluptatem fugiat. Praesentium enim, inventore voluptatum sapiente quos impedit consequuntur illo minima quae nisi molestiae excepturi officia soluta velit tempora similique!</div>
+            <div class="col bg-success">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae ducimus necessitatibus obcaecati natus minus officiis placeat quae quos, facere magnam fugiat eius esse, tempora doloribus porro velit earum, vero aperiam!</div>
+            <div class="col bg-warning align-self-start">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae ducimus necessitatibus obcaecati natus minus officiis placeat quae quos, facere magnam fugiat eius esse, tempora doloribus porro velit earum, vero aperiam!</div>
 
+        </div>
+    </div>
 
-    <script src="js/bootstrap.bundle.js"></script>
+ 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
