--- a/index3.html
+++ b/index3.html
@@ -1,15 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-</head>
-<body>
-    <h1>Hello npm world</h1>
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap/dist/css/bootstrap.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h2>Form Demo</h2>
+      <form>
+        <div class="row">
+          <div class="mb-3 col-md-6">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="text"
+              id="email"
+              class="form-control"
+              placeholder="Email"
+            />
+          </div>
+          <div class="mb-3 col-md-6">
+          <label for="password" class="form-label">Password</label>
+          <input
+            type="password"
+            id="password"
+            class="form-control"
+            placeholder="Password"
+          />
+        </div>
+        </div>
 
+        
+        <div class="mb-3">
+          <select class="form-select">
+            <option selected>Choose your city</option>
+            <option value="1">Mumbai</option>
+            <option value="2">Delhi</option>
+            <option value="3">Pune</option>
+          </select>
+        </div>
+        <div class="normal mb-3">
+          <input type="checkbox" id="agree" />
+          <label>Agree</label>
+        </div>
+        <div class="form-check mb-3">
+          <input class="form-check-input" type="checkbox" id="agreebs" />
+          <label for="agreebs" class="form-check-label">Agree</label>
+        </div>
+        <div class="form-check mb-3">
+          <input class="form-check-input" type="radio" id="radiobs" />
+          <label for="radiobs" class="form-check-label">Yes/No</label>
+        </div>
+        <div class="form-check form-switch">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            role="switch"
+            id="switchCheckDefault"
+          />
+          <label class="form-check-label" for="switchCheckDefault"
+            >Default switch checkbox input</label
+          >
+        </div>
+      </form>
+    </div>
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
